<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="celular">Celular</string>
    <string name="e_mail">E-mail</string>
    <string name="ingressar">Ingressar na lista de e-mails</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="conclusao">Ano de conclusao</string>
    <string name="instituicao">Instituicao</string>
    <string name="monografia">Titulo da Monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas">Vagas de interesse</string>
    <string name="formatura">Ano de formatura</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Medio</item>
        <item>Graduacao</item>
        <item>Especializacao</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>
